--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strides Between Us</title>
+     <link rel=stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to Strides Between Us</h1>
-    <p>This is the first version of the site hosted on Netlify!</p>
+    <p>This is the first version of the site hosted on Github</p>
 </body>
 </html>
