--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strides Between Us</title>
-     <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Strides Between Us</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Strides Between Us</h1>
-    <p>This is the first version of the site hosted on Github</p>
+  <div class="container">
+    <h1>Strides Between Us</h1>
+    <p class="subtitle">A novel about speed, loss, and the race to find what matters most</p>
+    
+    <a href="https://yourbooklink.com" target="_blank" class="cta-button">Read the First Chapter</a>
+    
+    <p class="small">Follow along as Jake, Paige, and Dolce sprint through heartbreak and hope.</p>
+  </div>
 </body>
 </html>
