--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Strides Between Us</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
+    <img src="cover.png" alt="Strides Between Us Book Cover" class="book-cover" />
+    
     <h1>Strides Between Us</h1>
     <p class="subtitle">A novel about speed, loss, and the race to find what matters most</p>
     
