--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="cover.png" alt="Strides Between Us Book Cover" class="book-cover" />
+    <img src="cover.PNG" alt="Strides Between Us Book Cover" class="book-cover" />
     
     <h1>Strides Between Us</h1>
     <p class="subtitle">A novel about speed, loss, and the race to find what matters most</p>
