--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Strides Between Us</h1>
     <p class="subtitle">A novel about speed, loss, and the race to find what matters most</p>
     
-    <a href="https://yourbooklink.com" target="_blank" class="cta-button">Read the First Chapter</a>
+    <a href="https://open.substack.com/pub/marccianfarani/p/why-im-writing-strides-between-us?r=77vvwe&utm_medium=ios&shareImageVariant=overlay" target="_blank" class="cta-button">Read the First Chapter</a>
     
     <p class="small">Follow along as Jake, Paige, and Dolce sprint through heartbreak and hope.</p>
   </div>
