--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,65 +1,24 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html>
 <head>
-<meta charset='UTF-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<title>Teacher Resources – Strides Between Us</title>
-<link rel='stylesheet' href='teacher-style.css'>
+<title>Teacher Resources</title>
+<link rel="stylesheet" href="teacher-style.css">
 </head>
 <body>
 
-<header class='header'>
-<h1>Teacher Resources</h1>
-<p class='tagline'>Classroom‑ready materials for teaching <em>Strides Between Us</em></p>
+<header>
+<img src="images/teacher_banner.png" class="banner">
 </header>
 
-<section class='section'>
-<h2>About This Guide</h2>
-<p>This resource package is designed for educators teaching <em>Strides Between Us</em> in Grades 8–10. 
-It includes themes, seminar questions, curriculum alignment, and downloadable materials.</p>
-</section>
+<h1>Teacher Resources</h1>
+<p>Download classroom-ready materials below.</p>
 
-<section class='section'>
-<h2>Major Themes</h2>
-<ul>
-<li>Homelessness & hidden struggles</li>
-<li>Mentorship & caring adults</li>
-<li>Identity & lost potential</li>
-<li>Trauma, shame & silence</li>
-<li>Animal connection & emotional healing</li>
-</ul>
-</section>
-
-<section class='section'>
-<h2>Seminar / Discussion Questions</h2>
-<ul>
-<li>Why do young people hide their struggles?</li>
-<li>What makes a mentor truly life‑changing?</li>
-<li>How does identity shift after loss or injury?</li>
-<li>Why is homelessness often invisible?</li>
-<li>Where does hope come from when everything falls apart?</li>
-</ul>
-</section>
-
-<section class='section'>
-<h2>Curriculum Alignment (Ontario)</h2>
-<p>This novel aligns with expectations in:</p>
-<ul>
-<li>Grade 8–10 English: Reading, Critical Thinking, Making Connections</li>
-<li>Health & Well‑Being: Mental Health, Identity, Resilience</li>
-<li>Equity & Inclusion: Understanding socio‑economic barriers</li>
-</ul>
-</section>
-
-<section class='section downloads'>
-<h2>Downloads</h2>
-<a class='button' href='#'>Teacher Guide (PDF)</a>
-<a class='button secondary' href='#'>Discussion Package</a>
-</section>
-
-<footer class='footer'>
-<p>© 2026 Strides Between Us</p>
-</footer>
+<div class="downloads">
+<div><img src="images/icon_teacher_guide.png"><br>Teacher Guide</div>
+<div><img src="images/icon_discussion_questions.png"><br>Discussion Questions</div>
+<div><img src="images/icon_curriculum_alignment.png"><br>Curriculum Alignment</div>
+<div><img src="images/icon_printable_pack.png"><br>Printable Pack</div>
+</div>
 
 </body>
 </html>
