--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head><meta charset='UTF-8'><title>Strides Between Us</title>
-<link rel='stylesheet' href='style.css'></head>
-<body><h1>Strides Between Us</h1></body></html>
+<html>
+<head>
+<title>Strides Between Us</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header class="hero">
+<img src="images/hero_jake.png" class="hero-img">
+<h1>Strides Between Us</h1>
+</header>
+
+<section>
+<h2>About the Book</h2>
+<p>A novel about resilience, redemption, and the power of one connection.</p>
+</section>
+
+<section>
+<a href="teacher-resources.html" class="button">Teacher Resources →</a>
+</section>
+
+</body>
+</html>
