--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -14,10 +14,10 @@
 <p>Download classroom-ready materials below.</p>
 
 <div class="downloads">
-<div><img src="images/icon_teacher_guide.png"><br>Teacher Guide</div>
-<div><img src="images/icon_discussion_questions.png"><br>Discussion Questions</div>
-<div><img src="images/icon_curriculum_alignment.png"><br>Curriculum Alignment</div>
-<div><img src="images/icon_printable_pack.png"><br>Printable Pack</div>
+<div><img src="images/teacher_guide.png"><br>Teacher Guide</div>
+<div><img src="images/discussion_questions.png"><br>Discussion Questions</div>
+<div><img src="images/curriculum_alignment.png"><br>Curriculum Alignment</div>
+<div><img src="images/printable_pack.png"><br>Printable Pack</div>
 </div>
 
 </body>
