--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -10,15 +10,21 @@
 <img src="images/teacher_banner.png" class="banner">
 </header>
 
+<section class="content">
 <h1>Teacher Resources</h1>
-<p>Download classroom-ready materials below.</p>
+<p class="subtitle">Download classroom‑ready materials below</p>
 
 <div class="downloads">
-<div><img src="images/teacher_guide.png"><br>Teacher Guide</div>
-<div><img src="images/discussion_questions.png"><br>Discussion Questions</div>
-<div><img src="images/curriculum_alignment.png"><br>Curriculum Alignment</div>
-<div><img src="images/printable_pack.png"><br>Printable Pack</div>
+    <div><img src="images/icon_teacher_guide.png"><span>Teacher Guide</span></div>
+    <div><img src="images/icon_discussion_questions.png"><span>Discussion Questions</span></div>
+    <div><img src="images/icon_curriculum_alignment.png"><span>Curriculum Alignment</span></div>
+    <div><img src="images/icon_printable_pack.png"><span>Printable Pack</span></div>
 </div>
+</section>
+
+<footer>
+<p>© Strides Between Us — Educational Resources</p>
+</footer>
 
 </body>
 </html>
