--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -15,10 +15,10 @@
 <p class="subtitle">Download classroom‑ready materials below</p>
 
 <div class="downloads">
-    <div><img src="images/icon_teacher_guide.png"><span>Teacher Guide</span></div>
-    <div><img src="images/icon_discussion_questions.png"><span>Discussion Questions</span></div>
-    <div><img src="images/icon_curriculum_alignment.png"><span>Curriculum Alignment</span></div>
-    <div><img src="images/icon_printable_pack.png"><span>Printable Pack</span></div>
+    <div><img src="images/teacher_guide.png"><span>Teacher Guide</span></div>
+    <div><img src="images/discussion_questions.png"><span>Discussion Questions</span></div>
+    <div><img src="images/curriculum_alignment.png"><span>Curriculum Alignment</span></div>
+    <div><img src="images/printable_pack.png"><span>Printable Pack</span></div>
 </div>
 </section>
 
