--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -15,10 +15,10 @@
 <p class="subtitle">Download classroom‑ready materials below</p>
 
 <div class="downloads">
-    <div><img src="images/teacher_guide.png"><span>Teacher Guide</span></div>
-    <div><img src="images/discussion_questions.png"><span>Discussion Questions</span></div>
-    <div><img src="images/curriculum_alignment.png"><span>Curriculum Alignment</span></div>
-    <div><img src="images/printable_pack.png"><span>Printable Pack</span></div>
+    <a href="#" class="download-button">Teacher Guide</a>
+    <a href="#" class="download-button">Discussion Questions</a>
+    <a href="#" class="download-button">Curriculum Alignment</a>
+    <a href="#"class="download-button"> Printable Pack</a>
 </div>
 </section>
 
