--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
 <body>
 
 <header class="hero">
-<img src="images/hero_jake.png" class="hero-img">
-<h1>Strides Between Us</h1>
+    <div class="hero-overlay">
+        <h1>Strides Between Us</h1>
+        <p class="subtitle">The story of a runner, a mentor, and a second chance.</p>
+        <a href="teacher-resources.html" class="hero-button">Teacher Resources →</a>
+    </div>
+    <img src="images/hero_jake.png" class="hero-img">
 </header>
-
-<section>
-<h2>About the Book</h2>
-<p>A novel about resilience, redemption, and the power of one connection.</p>
-</section>
-
-<section>
-<a href="teacher-resources.html" class="button">Teacher Resources →</a>
-</section>
 
 </body>
 </html>
