--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Teacher Resources</title>
-<link rel="stylesheet" href="teacher-style.css">
+<link rel="stylesheet" href="teacher.css">
 </head>
 <body>
 
-<header>
-<img src="images/teacher_banner.png" class="banner">
-</header>
-
-<section class="content">
-<h1>Teacher Resources</h1>
-<p class="subtitle">Download classroom‑ready materials below</p>
-
-<div class="downloads">
-    <a href="#" class="download-button">Teacher Guide</a>
-    <a href="#" class="download-button">Discussion Questions</a>
-    <a href="#" class="download-button">Curriculum Alignment</a>
-    <a href="#"class="download-button"> Printable Pack</a>
-</div>
+<section class="teacher-hero">
+    <div class="teacher-hero-overlay"></div>
+    <div class="teacher-hero-content">
+        <h1>Teacher Resource Hub</h1>
+        <p>Official Classroom Materials for <em>Strides Between Us</em></p>
+        <a href="#download-kit" class="teacher-cta">Download Full Teacher Kit</a>
+    </div>
 </section>
 
-<footer>
-<p>© Strides Between Us — Educational Resources</p>
-</footer>
+<section id="download-kit" class="teacher-section">
+    <h2>Download the Full Teacher Kit</h2>
+    <p>Includes Lesson Plans, Discussion Questions, Activities, Assessments & More</p>
+    <a class="download-btn" href="strides_teacher_kit.zip">Download ZIP (5 MB)</a>
+</section>
 
 </body>
 </html>
