--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="teacher.css">
+<meta charset="UTF-8">
+<title>Teacher Resources</title>
+<link rel="stylesheet" href="teacher-style.css">
 </head>
 <body>
 
-<section class="teacher-hero">
-    <div class="teacher-hero-overlay"></div>
-    <div class="teacher-hero-content">
+<header class="hero">
+    <img src="banner.png" class="hero-img" alt="Teacher Resources Banner">
+    <div class="hero-text">
         <h1>Teacher Resource Hub</h1>
-        <p>Official Classroom Materials for <em>Strides Between Us</em></p>
-        <a href="#download-kit" class="teacher-cta">Download Full Teacher Kit</a>
+        <p>Official Classroom Materials for Strides Between Us</p>
+        <a href="teacher_resources_bundle.zip" class="download-button">Download Full Teacher Kit</a>
     </div>
-</section>
+</header>
 
-<section id="download-kit" class="teacher-section">
+<section class="download-section">
     <h2>Download the Full Teacher Kit</h2>
     <p>Includes Lesson Plans, Discussion Questions, Activities, Assessments & More</p>
-    <a class="download-btn" href="strides_teacher_kit.zip">Download ZIP (5 MB)</a>
+    <a href="teacher_resources_bundle.zip" class="download-button green">Download ZIP (5 MB)</a>
 </section>
 
 </body>
