--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Teacher Resources</title>
-<link rel="stylesheet" href="teacher-style.css">
-</head>
-<body>
-
-<header class="hero">
-    <img src="banner.png" class="hero-img" alt="Teacher Resources Banner">
-    <div class="hero-text">
-        <h1>Teacher Resource Hub</h1>
-        <p>Official Classroom Materials for Strides Between Us</p>
-        <a href="/assets/teacher/strides_teacher_kit.zip" class="download-button">Download Full Teacher Kit</a>
-    </div>
-</header>
-
-<section class="download-section">
-    <h2>Download the Full Teacher Kit</h2>
-    <p>Includes Lesson Plans, Discussion Questions, Activities, Assessments & More</p>
-    <a href="/assets/teacher/strides_teacher_kit.zip" class="download-button green">Download ZIP (5 MB)</a>
-</section>
-
-</body>
-</html>
+<h1>Teacher Resources</h1>
