--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h1>Strides Between Us</h1>
         <p class="subtitle">The story of a runner, a mentor, and a second chance.</p>
         <a href="teacher-resources.html" class="hero-button">Teacher Resources</a>
+
+        <a href="https://marccianfarani.substack.com" class="hero-button">Subscribe on Substack</a>
+        <a href="sample-chapter.pdf" class="hero-button">Read First Chapter</a>
+
     </div>
 </header>
 
