--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="teacher-resources.html" class="hero-button">Teacher Resources</a>
 
         <a href="https://marccianfarani.substack.com" class="hero-button">Subscribe on Substack</a>
-        <a href="sample-chapter.pdf" class="hero-button">Read First Chapter</a>
+        <a href="chapters/chapter1_styled.pdf" class="hero-button">Read First Chapter</a>
 
     </div>
 </header>
