--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,1 +1,47 @@
-<h1>Teacher Resources</h1>
+<h1>Teacher Resources
+</h1>.<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Teacher Resources | Strides Between Us</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <header class="page-header">
+    <h1>Teacher Resources</h1>
+    <p>
+      Classroom-ready materials to support discussion, literacy, and themes
+      of resilience, identity, and second chances.
+    </p>
+  </header>
+
+  <section class="resources">
+
+    <div class="resource-card">
+      <h2>📘 Teacher Guide</h2>
+      <p>Context, themes, and suggested lesson structures.</p>
+      <a href="chapters/chapter1_styled.pdf" target="_blank">Download PDF</a>
+    </div>
+
+    <div class="resource-card">
+      <h2>📝 Discussion Questions</h2>
+      <p>Chapter-based prompts for class or small-group discussion.</p>
+      <a href="downloads/discussion_questions.pdf" target="_blank">Download PDF</a>
+    </div>
+
+    <div class="resource-card">
+      <h2>📚 Read Chapter One</h2>
+      <p>A full preview of the novel for classroom evaluation.</p>
+      <a href="chapters/chapter-1.html">Read Online</a>
+    </div>
+
+  </section>
+
+  <footer class="page-footer">
+    <a href="index.html">← Back to Home</a>
+  </footer>
+
+</body>
+</html>
