--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,49 +1,27 @@
-
-.<!DOCTYPE html>
-<h1>Teacher Resources
-</h1>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Teacher Resources | Strides Between Us</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="teacher-style.css">
+<title>Teacher Resources</title>
 </head>
-
 <body>
+<header class="banner">
+<img src="images/teacher_banner.png" class="banner-img">
+</header>
 
-  <header class="page-header">
-    <h1>Teacher Resources</h1>
-    <p>
-      Classroom-ready materials to support discussion, literacy, and themes
-      of resilience, identity, and second chances.
-    </p>
-  </header>
+<h1>Teacher Resources</h1>
+<p>Download classroom-ready materials below</p>
 
-  <section class="resources">
+<div class="button-row">
+<a class="btn" href="assets/teacher_guide.pdf">Teacher Guide</a>
+<a class="btn" href="assets/discussion_questions.pdf">Discussion Questions</a>
+<a class="btn" href="assets/curriculum_alignment.pdf">Curriculum Alignment</a>
+<a class="btn" href="assets/printable_pack.pdf">Printable Pack</a>
+</div>
 
-    <div class="resource-card">
-      <h2>📘 Teacher Guide</h2>
-      <p>Context, themes, and suggested lesson structures.</p>
-      <a href="chapters/chapter1_styled.pdf" target="_blank">Download PDF</a>
-    </div>
-
-    <div class="resource-card">
-      <h2>📝 Discussion Questions</h2>
-      <p>Chapter-based prompts for class or small-group discussion.</p>
-      <a href="downloads/discussion_questions.pdf" target="_blank">Download PDF</a>
-    </div>
-
-    <div class="resource-card">
-      <h2>📚 Read Chapter One</h2>
-      <p>A full preview of the novel for classroom evaluation.</p>
-      <a href="chapters/chapter-1.html">Read Online</a>
-    </div>
-
-  </section>
-
-  <footer class="page-footer">
-    <a href="index.html">← Back to Home</a>
-  </footer>
+<div class="button-row">
+<a class="btn" href="assets/chapter1_styled.pdf">Read Chapter One</a>
+</div>
 
 </body>
 </html>
