--- a/index.html
+++ b/index.html
@@ -1,39 +1,19 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-<title>Strides Between Us</title>
-<link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Strides Between Us</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<header class="hero">
-    <div class="hero-overlay">
-        <h1>Strides Between Us</h1>
-        <p class="subtitle">The story of a runner, a mentor, and a second chance.</p>
-        <a href="teacher-resources.html" class="hero-button">Teacher Resources</a>
-
-        <a href="https://marccianfarani.substack.com" class="hero-button">Subscribe on Substack</a>
-        <a href="chapters/chapter1_styled.pdf" class="hero-button">Read First Chapter</a>
-
+  <section class="hero">
+    <img src="images/hero_jake.png" alt="Jake Running" class="hero-img">
+    <div class="buttons">
+      <a href="teacher-resources.html" class="btn">Teacher Resources</a>
+      <a href="https://marccianfarani.substack.com" class="btn">Subscribe on Substack</a>
+      <a href="chapters/chapter1_styled.pdf" class="btn">Read First Chapter</a>
     </div>
-</header>
-
-<section class="summary">
-    <h2>About the Novel</h2>
-    <p>
-    Strides Between Us follows Jake, a promising young runner whose life collapses after a devastating injury
-    during his senior year. Lost, isolated, and unable to cope, he drifts into years of homelessness, severed
-    from the people who loved him most.
-    </p>
-    <p>
-    Through memory, grief, and the quiet power of human connection, Jake slowly rebuilds himself, confronting
-    the past he ran from and the mentor he failed to say goodbye to.
-    </p>
-    <p>
-    It is a novel about resilience, identity, second chances, and the belief that even after losing everything,
-    a person can still find their way back.
-    </p>
-</section>
-
+  </section>
 </body>
 </html>
