--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Strides Between Us</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Strides Between Us</title>
 </head>
 <body>
-  <section class="hero">
-    <img src="images/hero_jake.png" alt="Jake Running" class="hero-img">
-    <div class="buttons">
-      <a href="teacher-resources.html" class="btn">Teacher Resources</a>
-      <a href="https://marccianfarani.substack.com" class="btn">Subscribe on Substack</a>
-      <a href="chapters/chapter1_styled.pdf" class="btn">Read First Chapter</a>
+
+<header class="hero">
+    <img src="images/hero_jake.png" class="hero-img">
+    <div class="hero-overlay">
+        <h1>Strides Between Us</h1>
+        <p class="subtitle">The story of a runner, a mentor, and a second chance.</p>
+        <div class="buttons">
+            <a href="teacher-resources.html" class="btn">Teacher Resources</a>
+            <a href="https://marccianfarani.substack.com" class="btn">Subscribe on Substack</a>
+            <a href="chapters/chapter1_styled.pdf" class="btn">Read First Chapter</a>
+        </div>
     </div>
-  </section>
+</header>
+
+<section class="summary">
+    <h2>About the Novel</h2>
+    <p>
+        Strides Between Us follows Jake, a promising young runner whose life collapses after a devastating injury
+        during his senior year. Lost, isolated, and unable to cope, he drifts into years of homelessness, severed
+        from the people who loved him most.
+    </p>
+    <p>
+        Through memory, grief, and the quiet power of human connection, Jake slowly rebuilds himself, confronting
+        the past he ran from and the mentor he failed to say goodbye to.
+    </p>
+    <p>
+        It is a novel about resilience, identity, second chances, and the belief that even after losing
+        everything, a person can still find their way back.
+    </p>
+</section>
+
 </body>
 </html>
