--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="button-row">
-<a class="btn" href="assets/chapter1_styled.pdf">Read Chapter One</a>
+<a class="btn" href="chapters/chapter1_styled.pdf">Read Chapter One</a>
 </div>
 
 </body>
