--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -13,10 +13,10 @@
 <p>Download classroom-ready materials below</p>
 
 <div class="button-row">
-<a class="btn" href="assets/teacher_guide.pdf">Teacher Guide</a>
-<a class="btn" href="assets/discussion_questions.pdf">Discussion Questions</a>
-<a class="btn" href="assets/curriculum_alignment.pdf">Curriculum Alignment</a>
-<a class="btn" href="assets/printable_pack.pdf">Printable Pack</a>
+<a class="btn" href="assets/teacher_guide2.pdf">Teacher Guide</a>
+<a class="btn" href="assets/discussion_questions2.pdf">Discussion Questions</a>
+<a class="btn" href="assets/curriculum_alignment2.pdf">Curriculum Alignment</a>
+<a class="btn" href="assets/printable_pack2.pdf">Printable Pack</a>
 </div>
 
 <div class="button-row">
