--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section class="summary">
     <h2>About the Novel</h2>
     <p>
-        Strides Between Us follows Jake, a promising young runner whose life collapses after a devastating injury
+        <ii></ii>Strides Between Us</p>i>, follows Jake, a promising young runner whose life collapses after a devastating injury
         during his senior year. Lost, isolated, and unable to cope, he drifts into years of homelessness, severed
         from the people who loved him most.
     </p>
