--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="teacher-resources.html" class="btn">Teacher Resources</a>
             <a href="https://marccianfarani.substack.com" class="btn">Subscribe on Substack</a>
             <a href="chapters/chapter1_styled.pdf" class="btn">Read First Chapter</a>
+            <a href="author.html" class="btn">About the Author</a> 
         </div>
     </div>
 </header>
