--- a/author.html
+++ b/author.html
@@ -1,1 +1,87 @@
+<section id="about-author" class="author-section">
+  <div class="author-container">
+    <h1>About the Author</h1>
+
+    <p>
+      For more than thirty years, I worked advocating for injured workers.
+      I sat across from people whose injuries never fully healed whose pain
+      lingered long after decisions were made and files were closed. I saw what
+      chronic pain can do when it isn’t just physical, but invisible. Confidence
+      erodes. Relationships strain. Sometimes, entire lives quietly unravel.
+    </p>
+
+    <p>
+      At the same time, I’ve always been a runner.
+      Not an elite one just committed. The kind who keeps showing up.
+      Over the years, I’ve dealt with injuries, forced pauses, and the fear
+      that comes when your body doesn’t respond the way it once did.
+      Running has always been freedom for me, but it’s also taught me
+      how fragile that freedom can be.
+    </p>
+
+    <p>
+      I’m also a father.
+      When my daughter was younger, we had our daddy–daughter days.
+      Small things. Ordinary things. But anyone who’s lived that bond
+      knows how deeply it shapes you and how long it stays with you.
+    </p>
+
+    <p>
+      And then there’s Dolce, my whippet.
+      Watching her run is watching motion without doubt.
+      No overthinking. No hesitation. Just instinct and joy.
+    </p>
+
+    <p>
+      I also spent many years involved in youth sports from coaching soccer to being part
+      of the coaching group during my son’s minor hockey years. Those experiences
+      taught me the significance of positive role models and how deeply coaches
+      can impact the young people who trust them. The right coach doesn’t just
+      teach a sport; they shape confidence, character, and resilience.
+    </p>
+
+    <p>
+      Somewhere along the way, all of this converged.
+    </p>
+
+    <p>
+      The injured workers.<br>
+      The runner who keeps trying.<br>
+      The father who understands how love anchors you.<br>
+      The coach who has seen how mentorship changes young lives.<br>
+      The dog who reminds me what unburdened motion truly looks like.
+    </p>
+
+    <p>
+      <strong>Strides Between Us</strong> grew out of that intersection.
+    </p>
+
+    <p>
+      This story isn’t about winning races.
+      It’s about what happens when motion is taken away
+      and what it costs to find your way back.
+    </p>
+
+    <!-- Optional: uncomment and update these if you want links on the page
+
+    <div class="author-links">
+      <h2>Connect</h2>
+      <ul>
+        <li><a href="#" target="_blank" rel="noopener">LinkedIn</a></li>
+        <li><a href="#" target="_blank" rel="noopener">Substack</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="author-educators">
+      <h2>For Educators</h2>
+      <p>
+        Teachers and curriculum leads are welcome to request classroom
+        materials, previews, and alignment documents for <em>Strides Between Us</em>.
+      </p>
+    </div>
+
+    -->
+  </div>
+</section>
 
