--- a/author.html
+++ b/author.html
@@ -1,6 +1,6 @@
 <section id="about-author" class="author-section">
   <div class="author-container">
-    <h1>About the Author</h1>
+    <h1>About the Author- Marc Cianfarani</h1>
 
     <p>
       For more than thirty years, I worked advocating for injured workers.
