--- a/author.html
+++ b/author.html
@@ -70,11 +70,11 @@
 
         <p>
             For more than thirty years, I worked advocating for injured workers.
-            I sat across from people whose injuries never fully healed — whose pain lingered long after decisions were made and files were closed…
+            I sat across from people whose injuries never fully healed whose pain lingered long after decisions were made and files were closed…
         </p>
 
         <p>
-            At the same time, I’ve always been a runner. Not an elite one — just committed. The kind who keeps showing up…
+            At the same time, I’ve always been a runner. Not an elite one just committed. The kind who keeps showing up…
         </p>
 
         <p>
@@ -86,7 +86,7 @@
         </p>
 
         <p>
-            I also spent many years involved in youth sports — from soccer to being part of the coaching group during my son’s minor hockey years…
+            I also spent many years involved in youth sports, from soccer to being part of the coaching group during my son’s minor hockey years…
         </p>
 
         <p>
@@ -106,7 +106,7 @@
         </p>
 
         <p>
-            This story isn’t about winning races. It’s about what happens when motion is taken away — and what it costs to find your way back.
+            This story isn’t about winning races. It’s about what happens when motion is taken away and what it costs to find your way back.
         </p>
 
     </section>
