--- a/author.html
+++ b/author.html
@@ -57,6 +57,21 @@
 
 <body>
 
+    <!-- NAVIGATION BAR -->
+<nav class="topnav">
+    <div class="nav-container">
+        <a href="index.html" class="nav-logo">Strides Between Us</a>
+
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="teacher-resources.html">Teacher Resources</a>
+            <a href="author.html">Author</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+</nav>
+
+
     <section class="author-section">
 
         <div class="author-header">
