--- a/arc.html
+++ b/arc.html
@@ -102,7 +102,7 @@
 
     <!-- FORMSTART -->
 
-<form action="https://formspree.io/f/xkozzozvj" method="POST">
+<form action="https://formspree.io/f/xkozzovj" method="POST">
     <input type="email" name="email" placeholder="Enter your email address" required>
 
     <!-- Redirect after submit -->
